--- a/6.snake/ver01/snake.html
+++ b/6.snake/ver01/snake.html
@@ -1,9 +1,3 @@
-## 1. 贪吃蛇版本迭代（V1） 
-
-- 初始化游戏场景
-- 在坐标(100,100)处放置大小为8x8的食物
-
-~~~
 <!DOCTYPE html>
 <html>
     <head>
@@ -43,12 +37,14 @@
         </script>
     </head>
     <body>
+        <!-- 标题是如何居中的？ -->
         <h2 align="center">Greedy Snake</h2>
+        <!-- 画布时如何居中的？ -->
         <div>
+            <!-- 画布的样式是如何改变的？ -->
             <canvas id="field" width="400" height="600">
                 This is the field that snake snaking.
             </canvas>
         </div>
     </body>
 </html>
-~~~
