--- a/6.snake/ver02/snake.html
+++ b/6.snake/ver02/snake.html
@@ -6,7 +6,7 @@
         <style type="text/css">
             div {
                 width:400px;
-                margin:0 auto;
+                margin:0 auto;  
             }
             canvas {
                 background:#abcdef;
@@ -16,29 +16,50 @@
         <script type="text/javascript">
             var field;
             var game;
+            //游戏场景宽度
             var fieldWidth;
+            //游戏场景高度
             var fieldHeight;
+            //蛇行走的速度
             var speed = 160;
+            //食物的最初位置
             var foodX = foodY = 0;
+            //蛇节的大小，也是食物的大小
             var snakeUnitSize = 8;
-
+            
             window.onload = function(){
                 field = document.getElementById("field");
                 game = field.getContext("2d");
-                //game.fillStyle = "#ff0000"; 
-                //game.strokeStyle = "#000000"; 
-                //game.fillRect(100, 100, 8, 8); 
+                //game.fillStyle = "#ff0000";
+                //game.strokeStyle = "#000000";
+                //game.fillRect(100, 100, 8, 8);
+                //得到游戏场景的宽度
                 fieldWidth = field.width;
+                //得到游戏场景的高度
                 fieldHeight = field.height;
-                window.setInterval(putFood, speed); 
+                //固定时间间隔执行，每隔speed毫秒执行putFood功能
+                window.setInterval(putFood, speed);
             }
-            
+
+            /* 
+             * 随机投放食物
+             * Math.ceil小数向上取证，如10.1得到11
+             * Math.random()得到0.0~1.0之间的一个伪随机数。
+             * fieldWidth/size计算横向网格数
+             * fieldHeight/size计算纵向网格数
+             */
             function putFood(){
+                //得到食物的大小
                 var size = snakeUnitSize;
+                //设置食物内部颜色
                 game.fillStyle = "#ff0000";
+                //设置食物边框颜色
                 game.strokeStyle = "#000000";
+                //计算食物在场景网格的x坐标
                 foodX = Math.ceil(Math.random() * (fieldWidth/size));
+                //计算食物在场景网格的y坐标
                 foodY = Math.ceil(Math.random() * (fieldHeight/size));
+                //计算食物的具体坐标，绘制食物
                 game.fillRect(foodX*size, foodY*size, size, size);
             } 
         </script>
